--- a/examples/draft-0-10-0/color/color.html
+++ b/examples/draft-0-10-0/color/color.html
@@ -34,7 +34,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     <script src="../../../dist/Draft.js"></script>
     <script type="text/babel">
       'use strict';
-
+      window.__DRAFT_GKX = 'draft_tree_data_support'
       const {Editor, EditorState, Modifier, RichUtils} = Draft;
 
       class ColorfulEditorExample extends React.Component {
