--- a/examples/color/color.html
+++ b/examples/color/color.html
@@ -26,8 +26,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       color may be active at any time.
     </div>
     <div id="target"></div>
-    <script src="../../node_modules/react/dist/react.js"></script>
-    <script src="../../node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="../../node_modules/react/umd/react.development.js"></script>
+    <script src="../../node_modules/react-dom/umd/react-dom.development.js"></script>
     <script src="../../node_modules/immutable/dist/immutable.js"></script>
     <script src="../../node_modules/es6-shim/es6-shim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
@@ -144,8 +144,9 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
         var currentStyle = props.editorState.getCurrentInlineStyle();
         return (
           <div style={styles.controls}>
-            {COLORS.map(type =>
+            {COLORS.map((type, key) =>
               <StyleButton
+                key={key}
                 active={currentStyle.has(type.style)}
                 label={type.label}
                 onToggle={props.onToggle}
